test/fail_compilation/fail173.d

class C
{
    int x;
}

void main()
{
    //const (C) c = new C();
    const C c = new C();
    c.x = 3;
}
